@@ -24,6 +24,8 @@ Core and Builtins
 Library
 -------
 
+- Fix refcounting issue with extension types in tkinter.
+
 - Issue #8112: xlmrpc.server's DocXMLRPCServer server no longer raises an error
   if methods have annotations; it now correctly displays the annotations.
 
